Initial java files setup. 7:37 in first video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Spiritual Disciplines</string>
+    <string name="see_your_plans">See Your Plans</string>
+    <string name="see_all_activities">See All Activities</string>
+    <string name="about_us">About us</string>
 </resources>
